--- a/.github/workflows/run.yml
+++ b/.github/workflows/run.yml
@@ -20,7 +20,10 @@ jobs:
 
       - name: Install libraries
         run: |
+          python -m pip install --upgrade pip
           pip install -r requirements.txt
+          pip install mplfinance
+
 
       - name: Run Bot
         env:
